# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-eze-tomtom"
description = "Rust-eze Robotics TomTom"
authors = ["Guglielmo Boi", "Davide Andreolli", "Chiara Sabaini", "Aris Tomaselli"]
version = "1.0.0"
edition = "2021"
exclude = [".*"]

[lib]
name = "rust-eze-tomtom"
path = "src/lib.rs"

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}