# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust_eze_tomtom"
description = "Rust-eze Robotics TomTom"
authors = ["Guglielmo Boi", "Davide Andreolli", "Chiara Sabaini", "Aris Tomaselli"]
version = "1.0.3"
edition = "2021"
exclude = [".*"]

[lib]
name = "rust_eze_tomtom"
path = "src/lib.rs"

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}